cambios en scss

--- a/secciones/proyectos.html
+++ b/secciones/proyectos.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
-    <link rel="stylesheet" href="../estilos/style.css">
+    <!--css-->
+    <link rel="stylesheet" href="../css/estilo.css">
+    <!--fuentes-->
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
 <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
 <link href = "https: //fonts.googleapis.com/css2? family = Montserrat: wght @ 100 & display = swap "rel =" stylesheet ">
@@ -75,22 +76,22 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../imagenes/inspiracion frente.jpg" class="d-block w-100" alt="...">
+              <img src="../imagenes/inspiracion frente.jpg" class= "container-fluid" alt="inspiraciofrente">
             </div>
             <div class="carousel-item">
-              <img src="../imagenes/inspiracion interior 360.jpg" class="d-block w-100" alt="...">
+              <img src="../imagenes/inspiracion interior 360.jpg" class="container-fluid" alt="inspiracioninterior">
             </div>
             <div class="carousel-item">
-              <img src="../imagenes/inspiracion interior.jpg" class="d-block w-100" alt="...">
+              <img src="../imagenes/inspiracion interior.jpg" class="container-fluid" alt="inspiacioninterior">
             </div>
             <div class="carousel-item">
-              <img src="../imagenes/inspiracion cocina.jpg" class="d-block w-100" alt="...">
+              <img src="../imagenes/inspiracion cocina.jpg" class="container-fluid" alt="..cocina">
             </div>
             <div class="carousel-item">
-              <img src="../imagenes/inspiracion pasillo.jpg" class="d-block w-100" alt="...">
+              <img src="../imagenes/inspiracion pasillo.jpg" class="container-fluid" alt="pasillo">
             </div>
             <div class="carousel-item">
-              <img src="../imagenes/inspiracion exterior.jpg" class="d-block w-100" alt="...">
+              <img src="../imagenes/inspiracion exterior.jpg" class="container-fluid"alt="exterior">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
