--- a/secciones/inspiración.html
+++ b/secciones/inspiración.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/style.css">
+    <!--css-->
+    <link rel="stylesheet" href="../css/estilo.css">
+    <!--fuentes-->
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
 <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
 <link href = "https: //fonts.googleapis.com/css2? family = Montserrat: wght @ 100 & display = swap "rel =" stylesheet ">
@@ -55,7 +57,7 @@
         <h4 class="tituloInspiracion">Viví el presente, proyecta el futuro</h4>
         <p>Nuestra premisa fundamental es lograr una integracion del interior al exterior<p>
        <div> 
-        <img class="img-fluid" src="../imagenes/Fachada-posterior-de-casa-de-dos-pisos.jpg ">
+        <img class="container-fluid" src="../imagenes/Fachada-posterior-de-casa-de-dos-pisos.jpg ">
       </div>      
     </article>
     <aside class="container w-90"  >
