cambios en scss y en secciones

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -28,9 +28,12 @@
 
 <body class="contacto">
   <header>
-    <!-- etiqueta h1 -->
-    <div class="tracking-in-contract-bck-bottom">
-      <h1>Estudio <strong>ACD</strong> </h1>
+    <div class="container"> 
+      <div class="tracking-in-contract-bck-bottom">
+        <div class="logoCaja">
+          <img class="logo" src="../imagenes/logo_white_large.png" alt="">
+        </div>
+      </div>
     </div>
     <!--nav-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
@@ -67,9 +70,9 @@
   </header>
 
   <!--formulario-->
-
+  
   <section class="formulario">
-    <h4>Contactanos</h4>
+    <h2>Contactate con Estudio ACD </h2>
     <form>
 
       <div class="mb-3">
