--- a/secciones/inspiración.html
+++ b/secciones/inspiración.html
@@ -28,9 +28,13 @@
 
 <body>
   <header>
-    <!-- etiqueta h1 -->
-    <div class="tracking-in-contract-bck-bottom">
-      <h1>Estudio <strong>ACD</strong> </h1>
+    <!-- logo-->
+    <div class="container"> 
+      <div class="tracking-in-contract-bck-bottom">
+        <div class="logoCaja">
+          <img class="logo" src="../imagenes/logo_white_large.png" alt="">
+        </div>
+      </div>
     </div>
     <!--nav-->
 
@@ -78,7 +82,7 @@
 
 
   <main>
-    <h4 class="tituloInspiracion">TE MOSTRAMOS LAS ULTIMAS TENDENCIAS EN DECORACION DE INTERIORES</h4>
+    <h4 class="tituloInspiracion">Te mostramos las últimas tendencias en decoracion de interiores</h4>
     <h4 class="tituloInspiracion"> Con Impronta Industrial</h4>
     <section class="grid">
       <img class="foto1" src="../imagenes/estilo industrial sala.jpg" alt="" srcset="">
