--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -28,9 +28,13 @@
 
 <body>
   <header>
-    <!-- etiqueta h1 -->
-    <div class="tracking-in-contract-bck-bottom">
-      <h1>Estudio <strong>ACD</strong> </h1>
+    <!-- logo-->
+    <div class="container"> 
+      <div class="tracking-in-contract-bck-bottom">
+        <div class="logoCaja">
+          <img class="logo" src="../imagenes/logo_white_large.png" alt="">
+        </div>
+      </div>
     </div>
     <!--nav-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
@@ -67,16 +71,18 @@
   </header>
 
 
-  <article class="articleNosotros">
-    <h2 class="tituloSection">Estudio de Arqitectura, Construcción y Decoración</h2>
+  
+    
 
-    <section class="container w-90">
+    <section class="container">
+      <h2>Estudio de Arqitectura, Construcción y Decoración</h2>
+      <article class="row">
       <div class=" col-12 col-lg-6">
 
-        <p class="nosotros">En Estudio ACD ofrecemos un servicio integral donde combinamos arquitectura con el diseño de
+        <p>En Estudio ACD ofrecemos un servicio integral donde combinamos arquitectura con el diseño de
           mobiliario y
           acompañamos al cliente desde las ideas iniciales, hasta la materialización del objeto o espacio.
-          Nos centramos en la búsqueda de un producto con el cual cada cliente se sienta identificado.
+          Nos centramos en concretar proyectos en donde cada cliente se sienta identificado.
           Aportamos soluciones innovadoras, explotando cada material al máximo, creando así, una variedad de
           alternativas a situaciones cotidianas.
           Nuestro servicio comprende la generación de la idea principal, representación gráfica para la
@@ -86,9 +92,10 @@
       <div class="col-12 col-lg-6">
         <img src="../imagenes/exterior.jpg" alt="fachadas" class="d-block w-100">
       </div>
+    </article>
     </section>
 
-  </article>
+  
 
 
 
