--- a/secciones/proyectos.html
+++ b/secciones/proyectos.html
@@ -28,11 +28,15 @@
 
 <body>
   <header>
-    <!-- etiqueta h1 -->
-    <div class="tracking-in-contract-bck-bottom">
-      <h1>Estudio <strong>ACD</strong> </h1>
+    <!-- Logo -->
+    
+    <div class="container"> 
+      <div class="tracking-in-contract-bck-bottom">
+        <div class="logoCaja">
+          <img class="logo" src="../imagenes/logo_white_large.png" alt="">
+        </div>
+      </div>
     </div>
-
     <!--nav-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
       <div class="container-fluid">
@@ -72,7 +76,7 @@
   <main class="container-fluid">
 
     <section class="carrousel1">
-      <h4 class="tituloInspiracion">El hormigon y elementos nobles como protagonistas</h4>
+      <h2>El hormigon y elementos nobles como protagonistas</h2>
       <p>Ubicada en el Partido de San Vicente, provincia de Buenos Aires, suma detalles de estetica y practicidad,
         combinando elementos nobles con el hormigon desnudo</p>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -123,7 +127,7 @@
       </div>
     </section>
     <section class="carrousel2">
-      <h4 class="tituloInspiracion">Usos múltiples: Una casa con quincho vinculado al living, la cocina y la galería</h4>
+      <h2>Usos múltiples: Una casa con quincho vinculado al living, la cocina y la galería</h2>
       <p> Integrar espacios de un modo atípico fue una de las soluciones para que una familia lograra el espacio que
         necesitaba en la casa que quería.</p>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
