le saque los puntos a los titulos

--- a/secciones/inspiración.html
+++ b/secciones/inspiración.html
@@ -29,7 +29,7 @@
 <body>
   <header>
     <!-- logo-->
-    <div class="container"> 
+    <div class="container">
       <div class="tracking-in-contract-bck-bottom">
         <div class="logoCaja">
           <img class="logo" src="../imagenes/logo_white_large.png" alt="">
@@ -118,7 +118,8 @@
 
         <div class="col-12 col-lg-6">
 
-          <p>El exterior es tan importante como el interior. En ACD creamos espacios a tu medida, siempre a la vanguardia.</p>
+          <p>El exterior es tan importante como el interior. En ACD creamos espacios a tu medida, siempre a la
+            vanguardia.</p>
         </div>
 
       </article>
