--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -28,7 +28,7 @@
 
 <body class="contacto">
   <header>
-    <div class="container"> 
+    <div class="container">
       <div class="tracking-in-contract-bck-bottom">
         <div class="logoCaja">
           <img class="logo" src="../imagenes/logo_white_large.png" alt="">
@@ -70,7 +70,7 @@
   </header>
 
   <!--formulario-->
-  
+
   <section class="formulario">
     <h2>Contactate con Estudio ACD </h2>
     <form>
@@ -182,8 +182,8 @@
 
   <!--bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
