complete sección inspiración

--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item ">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="./secciones/proyectos.html">Proyectos</a>
+              <a class="nav-link" href="./secciones/proyectos.html">PROYECTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./secciones/nosotros.html" aria-current="true">Nosotros</a>
+              <a class="nav-link" href="./secciones/nosotros.html" aria-current="true">NOSOTROS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./secciones/inspiración.html">Inspiración</a>
+              <a class="nav-link" href="./secciones/inspiración.html">INSPIRACION</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="./secciones/contacto.html">Contacto</a>
+              <a class="nav-link" href="./secciones/contacto.html">CONTACTO</a>
             </li>
           </ul>
 
@@ -163,7 +163,7 @@
           <div class="card mx-auto">
             <img src="./imagenes/amasr-Direccion-de-Obra-Servicios.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h4 class="card-text">Construccíon</h4>
+              <h4 class="card-text">Construcción</h4>
             </div>
           </div>
 
