--- a/secciones/inspiración.html
+++ b/secciones/inspiración.html
@@ -48,20 +48,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="proyectos.html">Proyectos</a>
+              <a class="nav-link " href="proyectos.html">PROYECTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
+              <a class="nav-link" href="nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="inspiración.html">Inspiración</a>
+              <a class="nav-link active" href="inspiración.html">INSPIRACION</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
+              <a class="nav-link" href="contacto.html">CONTACTO</a>
             </li>
           </ul>
 
@@ -104,13 +104,24 @@
       <img class="foto3" src="../imagenes/baño-minimalisa.jpg" alt="">
       <img class="foto4" src="../imagenes/comedor minimalista.jpg" alt="">
     </section>
+    <h4 class="tituloInspiracion">Murales exóticos ¡Enamorate!</h4>
+    <section class="grid">
+      <img class="foto1" src="../imagenes/empapelados-flores-living.jpg" alt="">
+      <img class="foto2" src="../imagenes/empapeledos-modernos-industrial.jpg" alt="">
+      <img class="foto3" src="../imagenes/empapelados-modernos.jpg" alt="">
+      <img class="foto4" src="../imagenes/empapelados-flores-nordico.jpeg" alt="">
+    </section>
+
+
+
+    </section>
 
 
   </main>
   <section class="slide-fwd-top">
 
 
-    <div class="container w-90">
+    <div class="container">
       <article class="row">
         <div class="col-12 col-lg-6">
           <img src="../imagenes/galerias.jpg" class="d-block w-100" alt="galerias">
