--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -47,20 +47,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="proyectos.html">Proyectos</a>
+              <a class="nav-link" href="proyectos.html">PROYECTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
+              <a class="nav-link active" href="nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="inspiración.html">Inspiración</a>
+              <a class="nav-link" href="inspiración.html">INSPIRACION</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
+              <a class="nav-link" href="contacto.html">CONTACTO</a>
             </li>
           </ul>
 
@@ -75,7 +75,7 @@
 
 
   <section class="container">
-    <h2>Estudio de Arqitectura, Construcción y Decoración</h2>
+    <h2>Estudio de Arquitectura, Construcción y Decoración</h2>
     <article class="row">
       <div class=" col-12 col-lg-6">
 
