--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -46,20 +46,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="proyectos.html">Proyectos</a>
+              <a class="nav-link" href="proyectos.html">PROYECTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
+              <a class="nav-link" href="nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="inspiración.html">Inspiración</a>
+              <a class="nav-link" href="inspiración.html">INSPIRACION</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
+              <a class="nav-link active" href="contacto.html">CONTACTO</a>
             </li>
           </ul>
 
@@ -68,13 +68,16 @@
     </nav>
 
   </header>
+  <section>
+    <h4 class="tituloInspiracion">Comunicate con nosotros </h4>
+  </section>
+
+
 
   <!--formulario-->
 
   <section class="formulario">
-    <h2>Contactate con Estudio ACD </h2>
     <form>
-
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
         <input type="nombreyapellido" class="form-control" id="exampleFormControlInput1">
