--- a/secciones/proyectos.html
+++ b/secciones/proyectos.html
@@ -48,20 +48,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="proyectos.html">Proyectos</a>
+              <a class="nav-link active" href="proyectos.html">PROYECTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
+              <a class="nav-link" href="nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="inspiración.html">Inspiración</a>
+              <a class="nav-link" href="inspiración.html">INSPIRACION</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto</a>
+              <a class="nav-link" href="contacto.html">CONTACTO</a>
             </li>
           </ul>
 
